--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,197 @@
-/* You can add global styles to this file, and also import other style files */
+@import './app-theme';
+
+// Include material core styles.
+@include mat-core();
+
+@include angular-material-theme($theme);
+@include material-docs-app-theme($theme);
+
+body, html {
+  height: 100%;
+  color: rgba(0,0,0,.87);
+  background: #fff;
+  position: relative;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+body:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 2px;
+  width: 100%;
+  z-index: 999;
+  background-color: #00b2b1;
+}
+
+app-layout{
+  display: -ms-flexbox;
+    display: flex;
+    margin: 0;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+app-content-layout{
+    display: -ms-flexbox;
+    display: flex;
+    margin: 0;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.nav-wrapper{
+  flex-direction: column;
+    box-sizing: border-box;
+  display: -ms-flexbox;
+    display: flex;
+    margin: 0;
+    width: 100%;
+    min-height: 100%;
+    height: 100%;
+}
+
+.content-wrapper{
+  -ms-flex-direction: column;
+    flex-direction: column;
+    box-sizing: border-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex: 1;
+    flex: 1;
+    position: relative;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    display: block;
+    text-align: center;
+    scroll-behavior: smooth;
+}
+
+.router-wrapper {
+  display: -ms-flexbox;
+  display: flex;
+  margin: 0;
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+app-header{
+    display: flex;
+    box-sizing: border-box;
+    padding: 0;
+    width: 100%;
+    flex-direction: row;
+    align-items: center;
+    white-space: nowrap;
+    margin: 0;
+}
+
+.loading-spinner{    
+    background-color: #0000001f;
+    position: absolute;
+    width: 100%;
+    top: 0px;
+    left: 0px;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    display: grid;
+}
+
+.login-form-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+.button-flex-container {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+}
+
+ng-component{
+  display: flex;
+    align-items: flex-start;
+    text-align: left;
+    max-width: 940px;
+    margin: 0 auto;
+    min-height: 100vh;
+}
+
+table-of-contents {
+  top: 35px;
+  position: -webkit-sticky;
+  position: sticky;
+  font-size: 13px;
+  // Width is container width minus content width
+  width: 19%;
+  top: 0;
+  padding-left: 25px;
+  box-sizing: border-box;
+  display: inline-flex;
+  flex-direction: column;
+}
+
+.toc-container{
+  margin-top:35px;
+  width: 100%;
+    padding: 5px 0 10px 10px;
+    border-left: 4px solid #3f51b5;
+}
+
+.toc-heading{
+  margin: 0;
+  padding: 0;
+  font-size: 13px;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+
+.toc-link{
+  transition: color .1s;
+    line-height: 16px;
+    margin: 8px 0 0;
+    position: relative;
+    text-decoration: none;
+    display: block;
+    text-overflow: ellipsis;
+    width: 100%;
+    overflow: hidden;
+}
+
+.toc-active{
+  color:mat-color($accent, 500);
+}
+
+.content-to-table{
+  flex-grow: 1;
+  width: 80%;
+  outline: none;
+}
+
+.footer-content{
+  align-items: center;
+    display: flex;
+    flex-flow: row wrap;
+    padding: 8px;
+}
+
+.main-conent{
+  padding: 20px 70px 0;
+}
+
+a{
+  color: mat-color($primary, 500);
+}
