--- a/src/app/common/navigation/header/header.component.html
+++ b/src/app/common/navigation/header/header.component.html
@@ -4,13 +4,10 @@
             <mat-icon>menu</mat-icon>
         </button>
     </div>
-    <a mat-button class="companyName" routerLink="/">
-        <img src="../../../../assets/img/logo.png" height="60">
-    </a>
+    <a mat-button routerLink="/">Home</a>
     <span class="example-spacer"></span>
     <div fxShow="true" fxHide.lt-md>
-        <a mat-button routerLink="/">Home</a>
-        <a mat-button routerLink="/blog">Blog</a>
+        <a mat-button routerLink="/companies">Companies</a>
         <a mat-button routerLink="/contact">Contact</a>
     </div>
     <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
