--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,4 +1,4 @@
-<section fxLayout="column" fxFlexAlign="stretch">
+<section fxLayout="column" fxFlexAlign="stretch" *ngIf="false">
     <div fxFlexAlign="center">
         <p>Welcome to the Material Angular OwnerAccount Application</p>
     </div>
@@ -16,3 +16,8 @@
         </mat-tab>
     </mat-tab-group>
 </section>
+<div class="login-form-flex">
+    <section>
+        <h2>Welcome to demo app!</h2>
+    </section>
+</div>
