--- a/src/styles.scss
+++ b/src/styles.scss
@@ -121,6 +121,12 @@ app-header{
   justify-content: flex-end;
 }
 
+.content-flex-container {
+  display: flex;
+  width: 100%;
+  justify-content: flex-end;
+}
+
 ng-component{
   display: flex;
     align-items: flex-start;
