--- a/src/app/common/navigation/header/header.component.html
+++ b/src/app/common/navigation/header/header.component.html
@@ -8,9 +8,8 @@
     <span class="example-spacer"></span>
     <div fxShow="true" fxHide.lt-md>
         <a mat-button routerLink="/companies">Companies</a>
-        <a mat-button routerLink="/add-company">Add Company</a>
-        
-        <!-- <a mat-button routerLink="/contact">Contact</a> -->
+        <a mat-button routerLink="/blog">Blog</a>
+        <a mat-button routerLink="/contact">Contact</a>
     </div>
     <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
         <theme-picker></theme-picker>
